--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,10 @@
   "authors": [
     {
       "name": "Dev Test",
-      "email": "dev@localhost"
+      "email": "sergey.dev.technical@gmail.com"
     }
-  ]
+  ],
+  "require": {
+    "squizlabs/php_codesniffer": "3.5.2"
+  }
 }
